plugins/javaFX/testData/highlighting/copyReference.fxml
<?import javafx.scene.control.Button?>
<fx:root type="javafx.scene.layout.GridPane" xmlns:fx="http://javafx.com/fxml">
   <fx:copy source=<error descr="btn not found">"btn"</error>/>
   <Button fx:id="btn"/>
</fx:root>